--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^1.2.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.3",
+    "fetch-absolute": "^1.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
