--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,7 @@ services:
       - ./data:/data/db
     ports:
       - '27017:27017'
+  mongo_seed:
+    build: ./mongo-seed
+    links:
+      - mongo
