--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.3",
     "fetch-absolute": "^1.0.0",
     "vue": "^2.6.14",
+    "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
