--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,9 @@
     "express-validator": "^6.14.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.1"
+    "mongoose": "^6.8.1",
+    "morgan": "^1.10.0",
+    "pino": "^8.8.0",
+    "pino-pretty": "^9.1.1"
   }
 }
