--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URL=mongodb://mongosrv
+MONGO_URL=mongodb://mongosrv/SocialNetworkDb
 WITH_SAMPLE_DATA=true
 JWT_COOKIE_NAME=jwtoken
 JWT_PRIVATE_KEY=questanonlaindovineraimai
