Implemented mongodb authentication

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,4 +17,7 @@ services:
       - ./data:/data/db
     ports:
       - '27017:27017'
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password
     command: mongod --quiet --logpath /dev/null
