Little change to mongodb credentials

--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URL=mongodb://admin:password@mongosrv:27017/socialnetworkdb?authSource=admin
+MONGO_URL=mongodb://root:password@mongosrv:27017/socialnetworkdb?authSource=admin
 WITH_SAMPLE_DATA=true
 JWT_COOKIE_NAME=jwtoken
 JWT_PRIVATE_KEY=questanonlaindovineraimai
